// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/link_tooltip/link_tooltip should match snapshot 1`] = `
<Fragment>
  <span
    data-channel-mention="somechannel"
    data-hashtag="#somehashtag"
    data-link="somelink"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    test title
  </span>
</Fragment>
`;

exports[`components/link_tooltip/link_tooltip should match snapshot with uncommon link structure 1`] = `
<Fragment>
  <span
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <span
      className="codespan__pre-wrap"
    >
      <code>
        foo
      </code>
    </span>
     and 
    <span
      className="codespan__pre-wrap"
    >
      <code>
        bar
      </code>
    </span>
  </span>
</Fragment>
`;
